<resources>
    <string name="app_name">UtkiTeam</string>
    <string name="skip_onboarding">Пропустить</string>
    <string name="next_onboarding">Дальше</string>
    <string name="descr1_onboarding">Начинайте работу в нашей компании без лишних проблем. Наше приложение создано чтобы облегчить вам этот процесс.</string>

    <string name="head_HomePage_registration">Начинай изучение!</string>
    <string name="desc_HomePage_registration">Нас уже более 100к человек. Присоединяйся!</string>
    <string name="bt_enter_HomePage_registration">Вход</string>
    <string name="bt_reg_HomePage_registration">Регистрация</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="TB1">В нашей компании мы стремимся обеспечить безопасность и здоровье всех наших сотрудников, поэтому перед тем, как приступить к работе, необходимо ознакомиться с некоторыми правилами и рекомендациями по технике безопасности.</string>
    <string name="TB4">Надеемся, что эти рекомендации помогут вам оставаться в безопасности и здоровье во время работы в РусНетСфот.</string>
    <string name="TB3">
        Следите за своей позой и расстоянием до монитора, чтобы избежать проблем со здоровьем.
Никогда не ешьте или не пьте за рабочим столом.
           Никогда не ешьте или не пьте за рабочим столом.
Используйте все необходимые инструменты, чтобы избежать травм и повреждений, например, подставки для ноутбука, эргономичную мышь и клавиатуру.</string>
    <string name="TB2">Никогда не раскрывайте свой логин и пароль третьим лицам.
Никогда не устанавливайте программное обеспечение с ненадежных источников.
Никогда не открывайте подозрительные файлы или ссылки, которые могут содержать вирусы или другие вредоносные программы.</string>


    <string name="ПР1">Рабочее место должно быть чистым и убраным. Сотрудники должны содержать свои рабочие места в порядке и убирать за собой после работы.</string>
    <string name="ПР2">Запрещается курение в офисе и на рабочем месте. Для курения необходимо использовать специально отведенные места.</string>
    <string name="ПР3">Запрещено употребление алкоголя и наркотических веществ на рабочем месте.</string>
    <string name="ПР4">Сотрудники должны приходить на работу вовремя и готовыми к работе. Задержки на работу должны быть оговорены заранее с руководством.</string>
    <string name="ПР5">Рабочее время сотрудников должно соответствовать расписанию работы, которое определяется в соответствии с требованиями проектов и утверждается руководством.</string>
    <string name="ПР6">Сотрудники должны следить за конфиденциальностью информации компании и не разглашать ее третьим лицам.</string>
    <string name="ПР7">Сотрудники должны придерживаться правил работы с клиентами и вести себя профессионально при общении с ними.</string>
    <string name="ПР8">Сотрудники должны соблюдать правила безопасности и здоровья на рабочем месте, такие как использование перчаток и масок при работе с определенным оборудованием.</string>
    <string name="ПР9">Сотрудники должны проходить регулярное обучение и повышать свою квалификацию, чтобы обеспечить высокое качество работы.</string>


    <string name="ПЭ1"> <b>Правила эвакуации в случае чрезвычайной ситуации</b>  (ЧС) для ИТ-компании  должны быть разработаны в соответствии с требованиями пожарной безопасности и местными законодательными актами. Ниже представлены основные шаги, которые должны быть включены в правила эвакуации:</string>
    <string name="ПЭ2">Обучение сотрудников: Все сотрудники должны быть обучены процедуре эвакуации и знать, как быстро и безопасно покинуть здание в случае ЧС. Также необходимо обучение тому, каким образом сообщать об ЧС и какой информации необходимо сообщать</string>
    <string name="ПЭ3">Организация эвакуации: Необходимо определить ответственных за организацию эвакуации и их роли. Также должны быть разработаны процедуры и схемы эвакуации с указанием выходов и мест сбора. Эти процедуры должны быть известны всем сотрудникам.</string>
    <string name="ПЭ4">Проверка оборудования и систем безопасности: Важно регулярно проверять состояние систем пожарной безопасности и другого оборудования, такого как аварийное освещение и системы оповещения.</string>
    <string name="ПЭ5">Сбор на месте сбора: После эвакуации сотрудники должны собраться на заранее определенном месте сбора, чтобы обеспечить их безопасность и убедиться в том, что все были эвакуированы.</string>
    <string name="ПЭ6">Связь и контроль: Необходимо обеспечить постоянную связь с ответственными за эвакуацию, чтобы оперативно реагировать на изменение ситуации. Также необходимо проводить контроль за тем, что все сотрудники эвакуировались.</string>
    <string name="ПЭ7">Анализ и улучшение: После ЧС необходимо провести анализ произошедшего и определить, какие улучшения можно внести в процедуру эвакуации.</string>


</resources>