<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/statusbar"
    tools:context=".enter.HomePage">

    <ImageView
        android:id="@+id/ex_img_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="33dp"
        android:src="@drawable/slide_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ex_text_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/head_HomePage_registration"
        android:textAlignment="center"
        android:textColor="@color/head_reg"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ex_img_picture" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="35dp"
        android:layout_marginTop="3dp"
        android:text="@string/desc_HomePage_registration"
        android:textAlignment="center"
        android:textColor="@color/desc_reg"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ex_text_picture" />

    <Button
        android:id="@+id/bt_enter_reg"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/bt_enter_HomePage_registration"
        android:textColor="@color/bt_title_reg"
        android:textSize="18dp"
        app:backgroundTint="@color/bt_reg"
        app:layout_constraintBottom_toTopOf="@+id/bt_registration_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_registration_reg"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/bt_reg_HomePage_registration"
        android:textColor="@color/bt_title_reg"
        android:textSize="18dp"
        app:backgroundTint="@color/bt_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>